--- a/front/tienda/index.html
+++ b/front/tienda/index.html
@@ -27,7 +27,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="mate.html">Mates</a></li>
-            <li><a class="dropdown-item" href="bombilla.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="bombilla_mate.html">Bombillas</a></li>
             <li><a class="dropdown-item" href="Yerbas.html">Yerbas</a></li>
             <li><a class="dropdown-item" href="agregados.html">Agregados al Mate</a></li>
             <li><a class="dropdown-item" href="Kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
@@ -50,13 +50,16 @@
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="2_20250903_105248_0001.png" class="d-block w-100" alt="...">
+      <img src="imagrenes/img1_carusel.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="3_20250903_105248_0002.png" class="d-block w-100" alt="...">
+      <img src="imagrenes/img2_carusel.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="4_20250903_105248_0003.png" class="d-block w-100" alt="...">
+      <img src="imagrenes/img3_carusel.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="imagrenes/img4_carusel.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
