--- a/front/tienda/mate.html
+++ b/front/tienda/mate.html
@@ -27,7 +27,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="mate.html">Mates</a></li>
-            <li><a class="dropdown-item" href="bombilla.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="bombilla_mate.html">Bombillas</a></li>
             <li><a class="dropdown-item" href="Yerbas.html">Yerbas</a></li>
             <li><a class="dropdown-item" href="agregados.html">Agregados al Mate</a></li>
             <li><a class="dropdown-item" href="Kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
