se corrigieron las rutas de archivos

--- a/front/tienda.html
+++ b/front/tienda.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-success p-3">
+<nav class="navbar navbar-expand-lg bg-success p-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">El Culub del Mate</a>
+    <a class="navbar-brand" href="#">El Club del Mate</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Historia y Cultura</a>
@@ -26,17 +26,20 @@
             Tienda Online
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="mate.html">Mates</a></li>
-            <li><a class="dropdown-item" href="bombilla_mate.html">Bombillas</a></li>
-            <li><a class="dropdown-item" href="Yerbas.html">Yerbas</a></li>
-            <li><a class="dropdown-item" href="agregados.html">Agregados al Mate</a></li>
-            <li><a class="dropdown-item" href="Kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
+            <li><a class="dropdown-item" href="./mate.html">Mates</a></li>
+            <li><a class="dropdown-item" href="./bombilla_mate.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="./yerbas.html">Yerbas</a></li>
+            <li><a class="dropdown-item" href="./agregados.html">Agregados al Mate</a></li>
+            <li><a class="dropdown-item" href="./kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="tienda.html">Todos los productos</a></li>
+            <li><a class="dropdown-item" href="./tienda.html">Todos los productos</a></li>
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Academia & Tutoriales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -46,67 +49,9 @@
     </div>
   </div>
 </nav>
+
 <br>
 <div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-      </div>
-    </div>
-  </div>
-</div>
-<br>
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-      </div>
-    </div>
-  </div>
-</div>
-<br><div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
       <img src="..." class="card-img-top" alt="...">
