--- a/front/index.html
+++ b/front/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
-    <link rel="stylesheet" href="estilo.css">
+    <title>El Club del Mate</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-success p-3">
+<nav class="navbar navbar-expand-lg bg-success p-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">El Culub del Mate</a>
+    <a class="navbar-brand" href="#">El Club del Mate</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Historia y Cultura</a>
@@ -26,17 +26,20 @@
             Tienda Online
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="mate.html">Mates</a></li>
-            <li><a class="dropdown-item" href="bombilla_mate.html">Bombillas</a></li>
-            <li><a class="dropdown-item" href="Yerbas.html">Yerbas</a></li>
-            <li><a class="dropdown-item" href="agregados.html">Agregados al Mate</a></li>
-            <li><a class="dropdown-item" href="Kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
+            <li><a class="dropdown-item" href="./mate.html">Mates</a></li>
+            <li><a class="dropdown-item" href="./bombilla_mate.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="./yerbas.html">Yerbas</a></li>
+            <li><a class="dropdown-item" href="./agregados.html">Agregados al Mate</a></li>
+            <li><a class="dropdown-item" href="./kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="tienda.html">Todos los productos</a></li>
+            <li><a class="dropdown-item" href="./tienda.html">Todos los productos</a></li>
           </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" aria-disabled="true">Academia & Tutoriales</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -50,16 +53,16 @@
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../img/img1_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img1_carusel.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="../img/img2_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img2_carusel.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="../img/img3_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img3_carusel.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="../img/img4_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img4_carusel.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -68,10 +71,9 @@
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    
+    <span class="visually-hidden">Next</span>
   </button>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </body>
