--- a/front/index.html
+++ b/front/index.html
@@ -74,6 +74,59 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+  <div class="container">
+    <!-- Texto a la izquierda -->
+    <div class="text-section">
+      <h2>Porque se creo</h2>
+      <p>
+        En El Club del Mate creemos que tomar mate es más que una costumbre: es compartir, conversar y estar juntos. <br> Creamos este espacio para que cada cebada tenga una historia que contar
+        y cada sorbo sea un momento para disfrutar.
+      </p>
+    </div>
+
+    <!-- Imagen a la derecha -->
+    <img src="img/img1_carusel.png" alt="Persona comiendo pizza">
+  </div>
+  <div class="container">
+    <!-- Imagen -->
+    <img src="img/img2_carusel.png" alt="Persona comiendo pizza">
+
+    <!-- Texto -->
+    <div class="text-section">
+      <h2>Sobre nosotros</h2>
+      <p>
+        Un sitio creado para los que disfrutan de un buen mate. <br> Historias, consejos, recetas y todo lo que rodea a nuestra infusión más querida. <br>
+        Compartimos la pasión por el mate y todo lo que lo acompaña.
+      </p>
+    </div>
+  </div>
+   <div class="container">
+    <!-- Texto a la izquierda -->
+    <div class="text-section">
+      <h2>Comunidad</h2>
+      <p>
+        Tips de cebado, curiosidades de la yerba, recetas con mate y experiencias de nuestros socios. <br>
+        Únete a nuestra comunidad y comparte tu amor por el mate con otros entusiastas.
+      </p>
+    </div>
+
+    <!-- Imagen a la derecha -->
+    <img src="img/img3_carusel.png" alt="Persona comiendo pizza">
+  </div>
+  <div class="container">
+    <!-- Imagen -->
+    <img src="img/img3_carusel.png" alt="Persona comiendo pizza">
+
+    <!-- Texto -->
+    <div class="text-section">
+      <h2>Nuestos productos</h2>
+      <p>
+       Mates artesanales, bombillas de acero inoxidable, yerbas seleccionadas, termos de calidad. <br>
+        Todo lo que necesitas para disfrutar del mate en cualquier momento y lugar.
+      </p>
+    </div>
+  </div>
+   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </body>
