--- a/front/mate.html
+++ b/front/mate.html
@@ -53,28 +53,101 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="./img/mate2.jpg" class="card-img-top" alt="...">
+      <img src="./img/mate/mate1.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Mate de madera con caja</h5>
+        <p class="card-text">Mate de madera torneada, con virola de acero inoxidable.</p>
+        <p> <strong>$15.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/mate2.jpg" class="card-img-top" alt="...">
+      <img src="./img/mate/mate3.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Mate Stanley azul</h5>
+        <p class="card-text">Mate térmico Stanley en color azul pastel con virola dorada.</p>
+        <p> <strong>$20.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/mate2.jpg" class="card-img-top" alt="...">
+      <img src="./img/mate/mate2.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Mate metálico dorado martillado</h5>
+        <p class="card-text">Mate de acero inoxidable color dorado con acabado martillado.</p>
+        <p> <strong>$18.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate4.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate forrado en cuero lila</h5>
+        <p class="card-text">Mate de calabaza forrado en cuero teñido de color lila, con virola metálica decorada en relieve.</p>
+        <p> <strong>$14.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate5.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de madera torneada simple</h5>
+        <p class="card-text">Mate clásico de madera, liso y sin adornos, con virola de acero inoxidable.</p>
+        <p> <strong>$11.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate6.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de calabaza con base de cuero</h5>
+        <p class="card-text">Mate de calabaza natural con base de cuero cosido.</p>
+        <p> <strong>$13.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate7.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de madera con virola grabada</h5>
+        <p class="card-text">Mate de madera pulida con virola de alpaca grabada con diseños geométricos.</p>
+        <p> <strong>$16.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate8.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de calabaza con virola y pie metálico</h5>
+        <p class="card-text">Mate de calabaza con pie metálico y virola de alpaca decorada.</p>
+        <p> <strong>$22.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate9.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de acero inoxidable rosa</h5>
+        <p class="card-text">Mate de acero inoxidable color rosa con interior térmico.</p>
+        <p> <strong>$17.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate10.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de cerámica blanco</h5>
+        <p class="card-text">Mate de cerámica esmaltada de forma redonda.</p>
+        <p> <strong>$12.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
