--- a/front/bombilla_mate.html
+++ b/front/bombilla_mate.html
@@ -54,28 +54,101 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="./img/bombilla.webp" class="card-img-top" alt="...">
+      <img src="./img/bombilla/bombilla1.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Bombilla Clásica Lisa</h5>
+        <p class="card-text">Bombilla recta de acero inoxidable con aro dorado.</p>
+        <p> <strong>$4.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/bombilla.webp" class="card-img-top" alt="...">
+      <img src="./img/bombilla/bombilla2.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Bombilla de Acero con Filtro Cuchara</h5>
+        <p class="card-text">Modelo de acero inoxidable con filtro tipo cuchara desmontable.</p>
+        <p> <strong>$5.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
-  <div class="col">
+   <div class="col">
     <div class="card">
-      <img src="./img/bombilla.webp" class="card-img-top" alt="...">
+      <img src="./img/bombilla/bombilla3.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Bombilla Pico Plano Tradicional</h5>
+        <p class="card-text">Bombilla curva de acero y bronce, con filtro plano ranurado.</p>
+        <p> <strong>$6.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla4.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla Premium Grabada</h5>
+        <p class="card-text">Bombilla artesanal de alpaca y bronce con grabados.</p>
+        <p> <strong>$9.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
+        <p class="card-text">Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.</p>
+        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla6.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla Bolitas de Acero</h5>
+        <p class="card-text">Bombilla de diseño especial con esferas decorativas y filtro esférico.</p>
+        <p> <strong>$7.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla7.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla Pico Plano Curva</h5>
+        <p class="card-text">Bombilla de acero curvada con filtro plano. Robusta, ideal para yerbas intensas.</p>
+        <p> <strong>$5.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla8.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla con Rosca y Platillo</h5>
+        <p class="card-text">Bombilla con sistema a rosca y platillo desmontable para evitar derrames. Innovadora y práctica.</p>
+        <p> <strong>$7.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla9.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla de acero con Punta Metálica</h5>
+        <p class="card-text">Bombilla artesanal hecha de acero torneada, con boquilla metálica.</p>
+        <p> <strong>$5.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+   <div class="col">
+    <div class="card">
+      <img src="./img/bombilla/bombilla10.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Bombilla de Hierro con Pico Redondo</h5>
+        <p class="card-text">Bombilla sencilla de hierro con filtro esférico en la base. Estilo económico y funcional.</p>
+        <p> <strong>$2.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
