agredado mas contenido en agregados y en yerba, sitema de compra que siegue en progreso

--- a/front/yerbas.html
+++ b/front/yerbas.html
@@ -52,30 +52,103 @@
 
 <br>
 <div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
+   <div class="col">
     <div class="card">
-      <img src="./img/yerba.png" class="card-img-top" alt="...">
+      <img src="./img/yerba/yerba1.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Yerba Larga Vida Orgánica</h5>
+        <p class="card-text">Yerba mate orgánica certificada, sin agroquímicos. Ideal para quienes buscan un sabor natural y saludable.</p>
+        <p> <strong>$3.800 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/yerba.png" class="card-img-top" alt="...">
+      <img src="./img/yerba/yerba2.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Yerba Rosamonte</h5>
+        <p class="card-text">Yerba tradicional argentina con estacionamiento natural. Sabor fuerte y duradero.</p>
+        <p> <strong>$4.200 (1kg)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/yerba.png" class="card-img-top" alt="...">
+      <img src="./img/yerba/yerba3.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Yerba Matenki Digestiva</h5>
+        <p class="card-text">Yerba mate orgánica con hierbas digestivas y relajantes. Perfecta para quienes buscan un mate suave.</p>
+        <p> <strong>$4.500 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba4.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Atiguá Orgánica</h5>
+        <p class="card-text">Yerba orgánica con certificaciones internacionales. Sabor suave, cultivada de manera sostenible.</p>
+        <p> <strong>$4.000 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba5.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Ajedrez a Granel</h5>
+        <p class="card-text">Yerba mate clásica en presentación de gran volumen, utilizada en mayoristas y consumo familiar.</p>
+        <p> <strong>$20.000 (bolsa 10kg)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba6.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Eco Orgánico con Cáñamo</h5>
+        <p class="card-text">Yerba combinada con cáñamo, de cultivo ecológico. Una fusión innovadora para un mate diferente.</p>
+        <p> <strong>$5.500 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba7.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Antonia Molida</h5>
+        <p class="card-text">Yerba molida sin palo en envase transparente. Sabor fuerte, recomendada para los que buscan intensidad.</p>
+        <p> <strong>$3.500 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba8.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Cósmico Premium</h5>
+        <p class="card-text">Yerba mate artesanal en lata. Presentación premium, pensada para un consumo exclusivo.</p>
+        <p> <strong>$6.000 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba9.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Itabó Elaborada</h5>
+        <p class="card-text">Yerba mate elaborada con estacionamiento natural. Sabor equilibrado, tradicional de Misiones.</p>
+        <p> <strong>$3.900 (500g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Jesper a Granel</h5>
+        <p class="card-text">Yerba mate en presentación de bolsa grande para consumo masivo. Sabor intenso, ideal para bares o familias numerosas.</p>
+        <p> <strong>$22.000 (bolsa 10kg)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
