--- a/front/agregados.html
+++ b/front/agregados.html
@@ -54,28 +54,51 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="./img/manzanilla.jpg" class="card-img-top" alt="...">
+      <img src="./img/agregados/cacao.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Cáscara de Cacao</h5>
+        <p class="card-text">Agregado natural para el mate, aporta un sabor suave a chocolate y un aroma inconfundible.</p>
+        <p> <strong>$2.500 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/manzanilla.jpg" class="card-img-top" alt="...">
+      <img src="./img/agregados/coco.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Chips de Coco</h5>
+        <p class="card-text">Láminas de coco deshidratado. Aportan dulzura y un toque tropical al mate.</p>
+        <p> <strong>$3.000 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/manzanilla.jpg" class="card-img-top" alt="...">
+      <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Jengibre Deshidratado</h5>
+        <p class="card-text">Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.</p>
+        <p> <strong>$2.800 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/agregados/pack de agregados.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)</h5>
+        <p class="card-text">Combinación de hierbas refrescantes y florales que equilibran frescura y aroma. Ideal para mates suaves y aromáticos.</p>
+        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/agregados/pack de agregados2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)</h5>
+        <p class="card-text">Mezcla digestiva con notas especiadas y herbales. Excelente para un mate relajante.</p>
+        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
