--- a/front/kits_completos_para_principiantes.html
+++ b/front/kits_completos_para_principiantes.html
@@ -54,28 +54,101 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="./img/kit_mate.png" class="card-img-top" alt="...">
+      <img src="./img/kits completos de mate/kits completos de mate1.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Kit Matero Clásico con Mochila Verde</h5>
+        <p class="card-text">Incluye termo de acero, mate térmico, bombilla y bolso matero reforzado con bolsillos. Ideal para llevar a todos lados.</p>
+        <p> <strong>$28.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/kit_mate.png" class="card-img-top" alt="...">
+      <img src="./img/kits completos de mate/kits completos de mate2.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Kit Matero Ejecutivo Negro</h5>
+        <p class="card-text">Con estuche rígido elegante, termo de acero inoxidable, mate forrado, bombilla y dos yerberos metálicos.</p>
+        <p> <strong>$32.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="./img/kit_mate.png" class="card-img-top" alt="...">
+      <img src="./img/kits completos de mate/kits completos de mate3.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Kit Matero Marrón con Estuche de Cuero</h5>
+        <p class="card-text">Incluye bolso grande de cuero ecológico, termo de acero, mate de madera, bombilla y yerberos de acero.</p>
+        <p> <strong>$33.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate4.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Edición Mosaico</h5>
+        <p class="card-text">Con bolso exclusivo en diseño de mosaicos, termo, yerberos, mate forrado en acero y bombilla. Muy vistoso y moderno.</p>
+        <p> <strong>$38.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate5.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Mochila Outdoor</h5>
+        <p class="card-text">Mochila reforzada con termo, yerbero, mate de acero inoxidable y bombilla. Ideal para viajes y camping.</p>
+        <p> <strong>$30.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate6.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Minimalista Negro</h5>
+        <p class="card-text">Incluye bolso matero estilo bandolera, mate de acero inoxidable, termo negro y bombilla de acero. Diseño moderno y simple.</p>
+        <p> <strong>$27.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate7.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Pauny con Mate Amarillo</h5>
+        <p class="card-text">Termo de acero verde, mate de calabaza pintado de amarillo, bombilla y bolso matero con logo Pauny.</p>
+        <p> <strong>$29.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate8.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Familiar Negro</h5>
+        <p class="card-text">Con termo negro, dos yerberos, mate de acero, bombilla y bolso de cuero ecológico. Ideal para compartir en familia.</p>
+        <p> <strong>$34.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
+        <p class="card-text">Incluye bolso reforzado estilo mochila, termo de acero, yerbero, mate de madera, bombilla y azucarero.</p>
+        <p> <strong>$36.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/kits completos de mate/kits completos de mate10.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Kit Matero Premium de Cuero Marrón</h5>
+        <p class="card-text">Contiene mate de calabaza forrado en cuero con virola, bombilla de acero, termo de acero inoxidable y porta mate de cuero.</p>
+        <p> <strong>$35.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
