agredado mas contenido a tirnda y un sitema de compra que siegue en progreso

--- a/front/tienda.html
+++ b/front/tienda.html
@@ -54,28 +54,51 @@
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Jengibre Deshidratado</h5>
+        <p class="card-text">Jengibre molido en trozos pequeños. Brinda un sabor picante y energizante al mate.</p>
+        <p> <strong>$2.800 (100g)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
+        <p class="card-text">Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.</p>
+        <p> <strong>$6.500</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
+        <p class="card-text">Incluye bolso reforzado estilo mochila, termo de acero, yerbero, mate de madera, bombilla y azucarero.</p>
+        <p> <strong>$36.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Yerba Jesper a Granel</h5>
+        <p class="card-text">Yerba mate en presentación de bolsa grande para consumo masivo. Sabor intenso, ideal para bares o familias numerosas.</p>
+        <p> <strong>$22.000 (bolsa 10kg)</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="./img/mate/mate10.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Mate de cerámica blanco</h5>
+        <p class="card-text">Mate de cerámica esmaltada de forma redonda.</p>
+        <p> <strong>$12.000</strong>.<a class="btn btn-success" href="Compra.html" role="button">Comprar</a></p>
       </div>
     </div>
   </div>
